--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <style>
       .b1 {
         border: 1px solid red;
-      }      
+      }
     </style>
-
   </head>
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/header-logo.svg" alt="Логотип" class="header__logo">
+        <img
+          src="./images/header-logo.svg"
+          alt="Логотип"
+          class="header__logo"
+        />
         <div class="header__links">
           <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
           <a href="#" class="header__lang-link">En</a>
@@ -25,8 +28,38 @@
       <main class="content">
         <section class="lead">
           <h1 class="lead__title">Путешествия по России</h1>
-          <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-          <img class="lead__image" src="./images/lead-polka.jpg" alt="Картинка">
+          <p class="lead__subtitle">
+            Настоящая страна не в выпусках новостей, а здесь.
+          </p>
+          <img
+            class="lead__image"
+            src="./images/lead-polka.jpg"
+            alt="Картинка"
+          />
+          <p class="lead__caption">ваша полка — верхняя</p>
+        </section>
+
+        <section class="intro">
+          <h2 class="intro__title">Чего мы там не видели?</h2>
+          <p class="intro__text">
+            По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только
+            36% планируют провести отпуск в родной стране. Мол, чего мы тут,
+            дома, не видели? На самом деле, Россия — это целая вселенная с
+            ласковым морем юга, густыми лесами Саян и суровыми льдами плато
+            Путорана. А ещё увидеть все эти красоты можно без миллионов на
+            счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+            Башмакова — смелая молодая мама, которая взяла в охапку троих детей,
+            усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
+            стране. Мы выбрали и описали некоторые интересные места, достойные
+            вашего отпуска.
+          </p>
+          <ul class="intro__list">
+            <li class="intro__item">Часовых поясов <span class="intro__amount">11</span></li>
+            <li class="intro__item">Объектов природного наследия ЮНЕСКО <span class="intro__amount">12</span></li>
+            <li class="intro__item">Объектов культурного наследия ЮНЕСКО <span class="intro__amount">16</span></li>
+            <li class="intro__item">Природных заповедников <span class="intro__amount">105</span></li>
+            <li class="intro__item">Аэропортов <span class="intro__amount">241</span></li>
+          </ul>
         </section>
       </main>
     </div>
