--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
             <li class="intro__item">Аэропортов <span class="intro__amount">241</span></li>
           </ul>
         </section>
+
+        <section class="photo-grid">
+          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
+          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
+          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
+          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
+          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
+          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
+          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
+          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
+          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
+          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
+          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
+          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
+        </section>
       </main>
     </div>
   </body>
