update foto grid

--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
         </section>
 
         <section class="photo-grid">
-          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
-          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
-          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
-          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
-          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
-          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
-          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
-          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
-          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
-          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
-          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
-          <img src="./images/" alt="Картинка" class="photo-grid__item"></img>
+          <img src="./images/photo-grid-train.jpg" alt="Картинка" class="photo-grid__item">
+          <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Картинка" class="photo-grid__item">
+          <img src="./images/photo-grid-tuman.jpg" alt="Картинка" class="photo-grid__item">
+          <img src="./images/photo-grid-sochi.jpg" alt="Картинка" class="photo-grid__item">
+          <img src="./images/photo-grid-arisa.jpg" alt="Картинка" class="photo-grid__item">
+          <img src="./images/photo-grid-baikal.jpg" alt="Картинка" class="photo-grid__item">
+          <img src="./images/photo-grid-elbrus.jpg" alt="Картинка" class="photo-grid__item">
+          <img src="./images/photo-grid-kondratiev.jpg" alt="Картинка" class="photo-grid__item">
+          <img src="./images/photo-grid-kamchatka-1.jpg" alt="Картинка" class="photo-grid__item">
+          <img src="./images/photo-grid-kamchatka-2.jpg" alt="Картинка" class="photo-grid__item">
+          <img src="./images/photo-grid-baikal-2.jpg" alt="Картинка" class="photo-grid__item">
+          <img src="./images/photo-grid-ergaki.jpg" alt="Картинка" class="photo-grid__item">
         </section>
       </main>
     </div>
