--- a/index.html
+++ b/index.html
@@ -54,27 +54,118 @@
             вашего отпуска.
           </p>
           <ul class="intro__list">
-            <li class="intro__item">Часовых поясов <span class="intro__amount">11</span></li>
-            <li class="intro__item">Объектов природного наследия ЮНЕСКО <span class="intro__amount">12</span></li>
-            <li class="intro__item">Объектов культурного наследия ЮНЕСКО <span class="intro__amount">16</span></li>
-            <li class="intro__item">Природных заповедников <span class="intro__amount">105</span></li>
-            <li class="intro__item">Аэропортов <span class="intro__amount">241</span></li>
+            <li class="intro__item">
+              Часовых поясов <span class="intro__amount">11</span>
+            </li>
+            <li class="intro__item">
+              Объектов природного наследия ЮНЕСКО
+              <span class="intro__amount">12</span>
+            </li>
+            <li class="intro__item">
+              Объектов культурного наследия ЮНЕСКО
+              <span class="intro__amount">16</span>
+            </li>
+            <li class="intro__item">
+              Природных заповедников <span class="intro__amount">105</span>
+            </li>
+            <li class="intro__item">
+              Аэропортов <span class="intro__amount">241</span>
+            </li>
           </ul>
         </section>
 
         <section class="photo-grid">
-          <img src="./images/photo-grid-train.jpg" alt="Картинка" class="photo-grid__item">
-          <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Картинка" class="photo-grid__item">
-          <img src="./images/photo-grid-tuman.jpg" alt="Картинка" class="photo-grid__item">
-          <img src="./images/photo-grid-sochi.jpg" alt="Картинка" class="photo-grid__item">
-          <img src="./images/photo-grid-arisa.jpg" alt="Картинка" class="photo-grid__item">
-          <img src="./images/photo-grid-baikal.jpg" alt="Картинка" class="photo-grid__item">
-          <img src="./images/photo-grid-elbrus.jpg" alt="Картинка" class="photo-grid__item">
-          <img src="./images/photo-grid-kondratiev.jpg" alt="Картинка" class="photo-grid__item">
-          <img src="./images/photo-grid-kamchatka-1.jpg" alt="Картинка" class="photo-grid__item">
-          <img src="./images/photo-grid-kamchatka-2.jpg" alt="Картинка" class="photo-grid__item">
-          <img src="./images/photo-grid-baikal-2.jpg" alt="Картинка" class="photo-grid__item">
-          <img src="./images/photo-grid-ergaki.jpg" alt="Картинка" class="photo-grid__item">
+          <img
+            src="./images/photo-grid-train.jpg"
+            alt="Картинка"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid-atharva-tulsi.jpg"
+            alt="Картинка"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid-tuman.jpg"
+            alt="Картинка"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid-sochi.jpg"
+            alt="Картинка"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid-arisa.jpg"
+            alt="Картинка"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid-baikal.jpg"
+            alt="Картинка"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid-elbrus.jpg"
+            alt="Картинка"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid-kondratiev.jpg"
+            alt="Картинка"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid-kamchatka-1.jpg"
+            alt="Картинка"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid-kamchatka-2.jpg"
+            alt="Картинка"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid-baikal-2.jpg"
+            alt="Картинка"
+            class="photo-grid__item"
+          />
+          <img
+            src="./images/photo-grid-ergaki.jpg"
+            alt="Картинка"
+            class="photo-grid__item"
+          />
+        </section>
+
+        <section class="places">
+          <div class="places__place">
+            <h2 class="places__title">Куршская коса</h2>
+            <div class="places__website">
+              <p class="places__url-heading">URL</p>
+              <a href="" class="places__link">park-kosa.ru</a>
+            </div>
+            <img
+              src="./images/place-kosa.jpg"
+              alt="Картинка"
+              class="places__image"
+            />
+            <div class="places__paragraphs">
+              <p class="places__paragraph">
+                Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
+                водных горизонта — спокойного Куршского залива с одной стороны и
+                подёрнутого рябью волн Балтийского моря с другой. Уникальная
+                природная зона на краю российского анклава.
+              </p>
+              <p class="places__paragraph">
+                На этом Калининградская область не заканчивается. Для
+                путешественника и исследователя там же по соседству — самая
+                западная точка России, Балтийская коса, — и немецкое наследие
+                россыпи небольших приморских городов. Атмосфера здешних мест
+                исключает суету, окуная в спокойствие природы и запах стального,
+                прохладного моря.
+              </p>
+            </div>
+          </div>
         </section>
       </main>
     </div>
