--- a/index.html
+++ b/index.html
@@ -251,7 +251,26 @@
             </div>
           </div>
         </section>
+
+        <section class="cover">
+          <div class="cover__overlay"></div>
+          <img src="./images/cover-trains.jpg" alt="Картинка" class="cover__background">
+          <div class="cover__block">
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+          </div>
+        </section>
       </main>
+      <footer class="footer">
+        <nav class="footer__links">
+          <a href="#" class="footer__link">Карты</a>
+          <a href="#" class="footer__link">Погода</a>
+          <a href="#" class="footer__link">Расписание</a>
+          <a href="#" class="footer__link">Календарь</a>
+          <a href="#" class="footer__link">Петешествия</a>
+        </nav>
+        <p class="footer__copyright">© 2020. Alexey Orlov</p>
+      </footer>
     </div>
   </body>
 </html>
