--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <h2 class="places__title">Куршская коса</h2>
             <div class="places__website">
               <p class="places__url-heading">URL</p>
-              <a href="" class="places__link">park-kosa.ru</a>
+              <a target="_blank" href="http://park-kosa.ru" class="places__link page__link-hover">park-kosa.ru</a>
             </div>
             <img
               src="./images/place-kosa.jpg"
@@ -170,7 +170,7 @@
             <h2 class="places__title">Кольский</h2>
             <div class="places__website">
               <p class="places__url-heading">URL</p>
-              <a href="" class="places__link">National Geographic</a>
+              <a target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="places__link page__link-hover">National Geographic</a>
             </div>
             <img
               src="./images/place-kosa.jpg"
@@ -192,7 +192,7 @@
             <h2 class="places__title">Алтай</h2>
             <div class="places__website">
               <p class="places__url-heading">URL</p>
-              <a href="" class="places__link">Facebook</a>
+              <a target="_blank" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="places__link page__link-hover">Facebook</a>
             </div>
             <img
               src="./images/place-kosa.jpg"
@@ -213,7 +213,7 @@
             <h2 class="places__title">Зимний Байкал</h2>
             <div class="places__website">
               <p class="places__url-heading">URL</p>
-              <a href="" class="places__link">https://vk.com/baikalmile</a>
+              <a target="_blank" href="https://vk.com/baikalmile" class="places__link page__link-hover">https://vk.com/baikalmile</a>
             </div>
             <img
               src="./images/place-winter-baikal.jpg"
@@ -235,7 +235,7 @@
             <h2 class="places__title">Карелия</h2>
             <div class="places__website">
               <p class="places__url-heading">URL</p>
-              <a href="" class="places__link">http://vodlozero.ru/</a>
+              <a target="_blank" href="http://vodlozero.ru" class="places__link page__link-hover">http://vodlozero.ru/</a>
             </div>
             <img
               src="./images/place-karelia.jpg"
@@ -256,18 +256,18 @@
           <div class="cover__overlay"></div>
           <img src="./images/cover-trains.jpg" alt="Картинка" class="cover__background">
           <div class="cover__block">
-            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <a target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__title">До Байкала «на собаках»</a>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
           </div>
         </section>
       </main>
       <footer class="footer">
         <nav class="footer__links">
-          <a href="#" class="footer__link">Карты</a>
-          <a href="#" class="footer__link">Погода</a>
-          <a href="#" class="footer__link">Расписание</a>
-          <a href="#" class="footer__link">Календарь</a>
-          <a href="#" class="footer__link">Петешествия</a>
+          <a target="_blank" href="https://yandex.ru/maps" class="footer__link page__link-hover">Карты</a>
+          <a target="_blank" href="https://yandex.ru/pogoda" class="footer__link page__link-hover">Погода</a>
+          <a target="_blank" href="https://rasp.yandex.ru" class="footer__link page__link-hover">Расписание</a>
+          <a target="_blank" href="https://calendar.yandex.ru" class="footer__link page__link-hover">Календарь</a>
+          <a target="_blank" href="https://travel.yandex.ru" class="footer__link page__link-hover">Петешествия</a>
         </nav>
         <p class="footer__copyright">© 2020. Alexey Orlov</p>
       </footer>
