--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <a target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="places__link page__link-hover">National Geographic</a>
             </div>
             <img
-              src="./images/place-kosa.jpg"
+              src="./images/place-kolsky.jpg"
               alt="Картинка"
               class="places__image"
             />
@@ -195,7 +195,7 @@
               <a target="_blank" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="places__link page__link-hover">Facebook</a>
             </div>
             <img
-              src="./images/place-kosa.jpg"
+              src="./images/place-altai.jpg"
               alt="Картинка"
               class="places__image"
             />
