--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Russian-travel</title>
     <link rel="stylesheet" href="pages/index.css" />
-
-    <style>
-      .b1 {
-        border: 1px solid red;
-      }
-    </style>
   </head>
   <body>
     <div class="page">
@@ -21,8 +15,8 @@
           class="header__logo"
         />
         <div class="header__links">
-          <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
-          <a href="#" class="header__lang-link">En</a>
+          <a href="#" class="header__lang-link header__lang-link_active page__link-hover">Ru</a>
+          <a href="#" class="header__lang-link page__link-hover">En</a>
         </div>
       </header>
       <main class="content">
@@ -256,7 +250,8 @@
           <div class="cover__overlay"></div>
           <img src="./images/cover-trains.jpg" alt="Картинка" class="cover__background">
           <div class="cover__block">
-            <a target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__title">До Байкала «на собаках»</a>
+            <!-- <a target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__title">До Байкала «на собаках»</a> -->
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
           </div>
         </section>
