--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
           class="header__logo"
         />
         <div class="header__links">
-          <a href="#" class="header__lang-link header__lang-link_active page__link-hover">Ru</a>
+          <a
+            href="#"
+            class="header__lang-link header__lang-link_active page__link-hover"
+            >Ru</a
+          >
           <a href="#" class="header__lang-link page__link-hover">En</a>
         </div>
       </header>
@@ -136,7 +140,12 @@
             <h2 class="places__title">Куршская коса</h2>
             <div class="places__website">
               <p class="places__url-heading">URL</p>
-              <a target="_blank" href="http://park-kosa.ru" class="places__link page__link-hover">park-kosa.ru</a>
+              <a
+                target="_blank"
+                href="http://park-kosa.ru"
+                class="places__link page__link-hover"
+                >park-kosa.ru</a
+              >
             </div>
             <img
               src="./images/place-kosa.jpg"
@@ -164,7 +173,12 @@
             <h2 class="places__title">Кольский</h2>
             <div class="places__website">
               <p class="places__url-heading">URL</p>
-              <a target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="places__link page__link-hover">National Geographic</a>
+              <a
+                target="_blank"
+                href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                class="places__link page__link-hover"
+                >National Geographic</a
+              >
             </div>
             <img
               src="./images/place-kolsky.jpg"
@@ -173,12 +187,18 @@
             />
             <div class="places__paragraphs">
               <p class="places__paragraph">
-                Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
-                тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
+                Почти весь полуостров находится за Полярным кругом. Саамская
+                тундра, от которой на юг — тайга, а на север — Ледовитый океан,
+                прикидывающийся Баренцевым морем.
               </p>
               <p class="places__paragraph">
-                Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
-                в Мурманск.
+                Возможно, вы смотрели Звягинцева и даже слышали историю
+                арктического фестиваля в Териберке. Возможно, слово «Хибины» не
+                осталось под снегом школьных воспоминаний об уроках географии.
+                Возможно, вы не интересовались пронизывающей земную кору
+                сверхглубокой скважиной, а от апатитов вас давно накрывает
+                апатия. Но ваша мечта увидеть северное сияние начинает сбываться
+                с билетом в Мурманск.
               </p>
             </div>
           </div>
@@ -186,7 +206,12 @@
             <h2 class="places__title">Алтай</h2>
             <div class="places__website">
               <p class="places__url-heading">URL</p>
-              <a target="_blank" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="places__link page__link-hover">Facebook</a>
+              <a
+                target="_blank"
+                href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                class="places__link page__link-hover"
+                >Facebook</a
+              >
             </div>
             <img
               src="./images/place-altai.jpg"
@@ -195,11 +220,18 @@
             />
             <div class="places__paragraphs">
               <p class="places__paragraph">
-                Алтай — одно из красивейших мест в России. 
-                В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.
+                Алтай — одно из красивейших мест в России. В первую очередь
+                из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные
+                соснами, горные реки и озёра. А если вы откроете в автомобиле
+                окна, сможете познакомиться с невидимым чудом здешних мест —
+                горным воздухом.
               </p>
               <p class="places__paragraph">
-                Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
+                Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом.
+                Так вы увидите всё разнообразие местной флоры и фауны. По лесам
+                Алтая бродят лоси, над хребтами летают орлы, а на равнинах
+                пасутся косули. И знаменитые манулы — тоже обитатели Алтайского
+                края.
               </p>
             </div>
           </div>
@@ -207,7 +239,12 @@
             <h2 class="places__title">Зимний Байкал</h2>
             <div class="places__website">
               <p class="places__url-heading">URL</p>
-              <a target="_blank" href="https://vk.com/baikalmile" class="places__link page__link-hover">https://vk.com/baikalmile</a>
+              <a
+                target="_blank"
+                href="https://vk.com/baikalmile"
+                class="places__link page__link-hover"
+                >https://vk.com/baikalmile</a
+              >
             </div>
             <img
               src="./images/place-winter-baikal.jpg"
@@ -216,12 +253,17 @@
             />
             <div class="places__paragraphs">
               <p class="places__paragraph">
-                Всем известен Байкал как крупнейшее озеро 
-                в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.
+                Всем известен Байкал как крупнейшее озеро в мире. Многие также
+                знают, что это самый большой источник пресной воды и одно из
+                красивейших мест в России.
               </p>
               <p class="places__paragraph">
-                Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
-                к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
+                Конечно, это всё так. Но Байкал ещё идеальное место
+                для соревнований по скийорингу. Это такой вид спорта, когда
+                лыжник привязывает себя к мотоциклу, и тандем старается развить
+                как можно бóльшую скорость на льду. В марте 2019 года на
+                фестивале «Байкальская миля» был поставлен мировой рекорд —
+                197.011 км/ч.
               </p>
             </div>
           </div>
@@ -229,7 +271,12 @@
             <h2 class="places__title">Карелия</h2>
             <div class="places__website">
               <p class="places__url-heading">URL</p>
-              <a target="_blank" href="http://vodlozero.ru" class="places__link page__link-hover">http://vodlozero.ru/</a>
+              <a
+                target="_blank"
+                href="http://vodlozero.ru"
+                class="places__link page__link-hover"
+                >http://vodlozero.ru/</a
+              >
             </div>
             <img
               src="./images/place-karelia.jpg"
@@ -238,9 +285,15 @@
             />
             <div class="places__paragraphs">
               <p class="places__paragraph">
-                Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
-                В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
-                в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+                Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
+                сибирская лиственница не растёт западнее Водлозера. Зато здесь
+                она вымахивает на 30 метров — леса карельских национальных
+                парков из-за непроходимых болот никогда не знали топора.
+                Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к
+                живому существу, видевшему солнце раньше, чем увидал его Иван
+                Грозный. В девственном лесу на сотню километров не встретишь
+                тропы. А на редких тропинках деревья в паре метров от земли
+                помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
               </p>
             </div>
           </div>
@@ -248,21 +301,59 @@
 
         <section class="cover">
           <div class="cover__overlay"></div>
-          <img src="./images/cover-trains.jpg" alt="Картинка" class="cover__background">
+          <a
+            target="_blank"
+            href="https://stampsy.com/na-elektrichkakh-do-baikala"
+            class="cover__link"
+          >
+          </a>
+          <img
+            src="./images/cover-trains.jpg"
+            alt="Картинка"
+            class="cover__background"
+          />
           <div class="cover__block">
             <!-- <a target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__title">До Байкала «на собаках»</a> -->
             <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            <p class="cover__subtitle">
+              По мотивам учебной темы о Транссибе — путешествие от столицы до
+              Байкала на электричках.
+            </p>
           </div>
         </section>
       </main>
       <footer class="footer">
         <nav class="footer__links">
-          <a target="_blank" href="https://yandex.ru/maps" class="footer__link page__link-hover">Карты</a>
-          <a target="_blank" href="https://yandex.ru/pogoda" class="footer__link page__link-hover">Погода</a>
-          <a target="_blank" href="https://rasp.yandex.ru" class="footer__link page__link-hover">Расписание</a>
-          <a target="_blank" href="https://calendar.yandex.ru" class="footer__link page__link-hover">Календарь</a>
-          <a target="_blank" href="https://travel.yandex.ru" class="footer__link page__link-hover">Петешествия</a>
+          <a
+            target="_blank"
+            href="https://yandex.ru/maps"
+            class="footer__link page__link-hover"
+            >Карты</a
+          >
+          <a
+            target="_blank"
+            href="https://yandex.ru/pogoda"
+            class="footer__link page__link-hover"
+            >Погода</a
+          >
+          <a
+            target="_blank"
+            href="https://rasp.yandex.ru"
+            class="footer__link page__link-hover"
+            >Расписание</a
+          >
+          <a
+            target="_blank"
+            href="https://calendar.yandex.ru"
+            class="footer__link page__link-hover"
+            >Календарь</a
+          >
+          <a
+            target="_blank"
+            href="https://travel.yandex.ru"
+            class="footer__link page__link-hover"
+            >Петешествия</a
+          >
         </nav>
         <p class="footer__copyright">© 2020. Alexey Orlov</p>
       </footer>
